<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:myapp="http://schemas.android.com/apk/res/com.androidsfuture.bodystats"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:paddingTop="15dip"
	android:paddingLeft="8dip"
  	android:background="#B93B8F" >
  	
  	
	<ImageButton 
		android:id="@+id/ImageButton01" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:padding="35dip"
		android:paddingLeft="15dip"
		android:background="@drawable/gymnastics_48"></ImageButton>
 		
 	<TextView 
		android:text="@string/motivation_title"
		android:id="@+id/Title_Motivate" 
		android:layout_toRightOf="@id/ImageButton01" 
		android:textSize="30dip"
		android:textColor="@color/text_color"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:paddingLeft="20dip"
		android:paddingTop="15dip"
		android:paddingBottom="30dip"></TextView>
  	
  	


<ScrollView  
		android:layout_below="@+id/Title_Motivate"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:scrollbarSize="12dip"
		
		>

    <LinearLayout 
    		android:orientation="vertical" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:layoutAnimation="@anim/layout_animation_row_left_slide_m">

        <TextView 
        		android:text="@string/transformation_of_the_week" 
        		android:textSize="20sp" 
        		android:id="@+id/Tranformation" 
        		android:layout_below="@id/Title_Motivate" 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:paddingBottom="3dip" 
        		android:paddingLeft="8dip"
        		></TextView>
		<TextView 
				android:text="@string/bodybuilding_com" 
				android:textSize="15sp" 
				android:id="@+id/BodybuildingLink" 
				android:layout_below="@+id/Tranformation" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"
				android:focusable="true"
				 ></TextView>
				<View 
						android:id="@+id/View01" 
						android:layout_below="@+id/BodybuildingLink" 
						android:layout_width="wrap_content" 
						android:layout_height="2dip" 
						android:background="@color/text_color"></View>
				
		<TextView 
				android:text="@string/motivation_of_the_day" 
				android:textSize="20sp" 
				android:id="@+id/MoDLink" 
				android:layout_below="@id/View01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/womensfitness_net" 
				android:textSize="15sp" 
				android:id="@+id/WomensFitnessLink" 
				android:layout_below="@+id/MoDLink" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true" ></TextView>
				<View 
						android:id="@+id/View02" 
						android:layout_below="@+id/WomensFitnessLink" 
						android:layout_width="wrap_content" 
						android:layout_height="2dip" 
						android:background="@color/text_color"></View>
				
		<TextView 
				android:text="@string/biggest_loser_club" 
				android:textSize="20sp" 
				android:id="@+id/BiggestLooserClub" 
				android:layout_below="@id/View02" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/biggestloserclub_com" 
				android:textSize="15sp" 
				android:id="@+id/BiggestLooserLink" 
				android:layout_below="@+id/BiggestLooserClub" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true" ></TextView>
				<View 
						android:id="@+id/View03" 
						android:layout_below="@+id/BiggestLooserLink" 
						android:layout_width="wrap_content" 
						android:layout_height="2dip" 
						android:background="@color/text_color"></View>
				
		<TextView 
				android:text="@string/weight_loss_motivation" 
				android:textSize="20sp" 
				android:id="@+id/WeightLossMotivation" 
				android:layout_below="@id/View03" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>	
		<TextView 
				android:text="@string/turkeywalk_com" 
				android:textSize="15sp" 
				android:id="@+id/WLMBLink" 
				android:layout_below="@+id/WeightLossMotivation" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true" ></TextView>
				<View 
						android:id="@+id/View04" 
						android:layout_below="@+id/WLMBLink" 
						android:layout_width="wrap_content" 
						android:layout_height="2dip" 
						android:background="@color/text_color"></View>
				
		<TextView 
				android:text="@string/making_weight_loss_fun" 
				android:textSize="20sp" 
				android:id="@+id/MakingWeightLossFun" 
				android:layout_below="@id/View04" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/projectweightloss_com" 
				android:textSize="15sp" 
				android:id="@+id/MWLFLink" 
				android:layout_below="@+id/MakingWeightLossFun" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true" ></TextView>
				<View 
						android:id="@+id/View05" 
						android:layout_below="@+id/MWLFLink" 
						android:layout_width="wrap_content" 
						android:layout_height="2dip"
						android:background="@color/text_color"></View>
						
    	<TextView 
    			android:text="@string/motivation_and_goalsetting" 
    			android:textSize="20sp"
    			android:id="@+id/GoalSetting" 
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/sportsmedicine" 
				android:textSize="15sp" 
				android:id="@+id/GoalSettingLink" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
				<View 
						android:id="@+id/View06" 
						android:layout_below="@+id/MWLFLink" 
						android:layout_width="wrap_content" 
						android:layout_height="2dip"
						android:background="@color/text_color"></View>
						
		<TextView 
				android:text="@string/exercise_motivation" 
				android:id="@+id/Exercise_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/todaysbestweightloss_com" 
				android:id="@+id/Exercise_MotivationLink" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
		<View 
				android:id="@+id/View07" 
				android:layout_below="@+id/MWLFLink" 
				android:layout_width="wrap_content" 
				android:layout_height="2dip"
				android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/hundred_lb_weightloss" 
				android:id="@+id/Hundred_Pound_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/youtube_video" 
				android:id="@+id/Hundred_Pound_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View08" 
					android:layout_below="@id/Hundred_Pound_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/what_I_ate" 
				android:id="@+id/What_I_Ate_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/healthy_hot_moma" 
				android:id="@+id/What_I_Ate_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View09" 
					android:layout_below="@+id/What_I_Ate_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/joy_fit_bianca" 
				android:id="@+id/JoyFitBianca_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/joy_fit_youtube" 
				android:id="@+id/JoyFitBianca_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View10" 
					android:layout_below="@id/JoyFitBianca_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/joy_fit_mom" 
				android:id="@+id/JoyFitMom127_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/joy_fit_youtube" 
				android:id="@+id/JoyFitMom127_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View11" 
					android:layout_below="@id/JoyFitMom127_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/joy_fit_300lbs" 
				android:id="@+id/JoyFit300_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/joy_fit_youtube" 
				android:id="@+id/JoyFit300_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
		<View 
				android:id="@+id/View12" 
				android:layout_below="@id/JoyFit300_Link" 
				android:layout_width="wrap_content" 
				android:layout_height="2dip"
				android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/joy_fit_lisa" 
				android:id="@+id/JoyFit340_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/joy_fit_youtube" 
				android:id="@+id/JoyFit340_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View13" 
					android:layout_below="@id/JoyFit340_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/kim_benson" 
				android:id="@+id/Kim_Benson_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/today_show_youtube" 
				android:id="@+id/Kim_Benson_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View14" 
					android:layout_below="@id/Kim_Benson_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/woman_lost_500lbs" 
				android:id="@+id/Five_Hundred_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/abc_news_youtube" 
				android:id="@+id/Five_Hundred_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View15" 
					android:layout_below="@+id/Five_Hundred_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/shay_interview" 
				android:id="@+id/Shay_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/dietsinreview_youtube" 
				android:id="@+id/Shay_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
			<View 
					android:id="@+id/View16" 
					android:layout_below="@+id/Shay_Link" 
					android:layout_width="wrap_content" 
					android:layout_height="2dip"
					android:background="@color/text_color"></View>
		<TextView 
				android:text="@string/amanda_answers_questions_1" 
				android:id="@+id/Amanda_Ques_1_Motivation" 
				android:textSize="20sp"
				android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:paddingBottom="3dip" 
				android:paddingTop="10dip" 
				android:paddingLeft="8dip"></TextView>
		<TextView 
				android:text="@string/dietsinreview_youtube" 
				android:id="@+id/Amanda_Ques_1_Link" 
				android:textSize="15sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingBottom="10dip" 
				android:paddingLeft="8dip"
				android:linksClickable="true"></TextView>
		<View 
				android:id="@+id/View17" 
				android:layout_below="@id/Amanda_Ques_1_Link" 
				android:layout_width="wrap_content" 
				android:layout_height="2dip"
				android:background="@color/text_color"></View>
				
		<View 
				android:id="@+id/View18" 
				android:layout_width="wrap_content" 
				android:layout_height="45dip"></View>
</LinearLayout>
</ScrollView>
<com.admob.android.ads.AdView
		android:id="@+id/ad"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:animation="@anim/fade"
		myapp:backgroundColor="#000000"
		myapp:primaryTextColor="#FFFFFF"
		myapp:secondaryTextColor="#CCCCCC"
		myapp:keywords="hair|makeup|workout|gym|run|shoe|bag|weight|loose|fat|lip|feet|jewelery|woman|women|nails"
	/>



</RelativeLayout>

