<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:padding="2dip">

<TableLayout 
	android:id="@+id/TableLayout01" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content">
		<TableRow 
			android:id="@+id/TableRow01" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
				<TextView 
					android:text="@string/Chest" 
					android:id="@+id/TextView02" 
					android:textSize="16sp"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:paddingLeft="20dip"
					android:gravity="right"></TextView>
				<EditText 
					android:id="@+id/DelChest" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:inputType="phone"
					android:maxWidth="100sp"
					android:maxHeight="10sp"
					android:paddingLeft="50dip"></EditText>
				<TextView 
					android:text="@string/Waist" 
					android:id="@+id/TextView03" 
					android:textSize="16sp"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:gravity="right"
					android:paddingLeft="10dip"></TextView>
				<EditText 
					android:id="@+id/DelWaist" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:inputType="phone"
					android:maxWidth="100sp"
					android:maxHeight="10sp"
					android:paddingLeft="50dip"></EditText>
			</TableRow>
		<TableRow 
			android:id="@+id/TableRow02" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
				<TextView 
					android:text="@string/Hips" 
					android:textSize="16sp"
					android:id="@+id/Hips_Text" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:paddingLeft="18dip"
					android:gravity="right"></TextView>
				<EditText 
					android:id="@+id/DelHips" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:inputType="phone"
					android:maxWidth="100sp"
					android:maxHeight="10sp"
					android:paddingLeft="50dip"></EditText>
				<TextView 
					android:text="@string/Arm" 
					android:id="@+id/TextView05" 
					android:textSize="16sp"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:paddingLeft="20dip"
					android:gravity="right"></TextView>
				<EditText 
					android:id="@+id/DelArm" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:inputType="phone"
					android:maxWidth="100sp"
					android:maxHeight="10sp"
					android:paddingLeft="50dip"></EditText>
			</TableRow>
		<TableRow 
			android:id="@+id/TableRow03" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
				<TextView 
					android:text="@string/Thigh" 
					android:id="@+id/TextView06" 
					android:textSize="16sp"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:paddingLeft="18dip"
					android:gravity="right"></TextView>
				<EditText 
					android:id="@+id/DelThigh" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:inputType="phone"
					android:maxWidth="100sp"
					android:maxHeight="10sp"
					android:paddingLeft="50dip"></EditText>
				<TextView 
					android:text="@string/Weight" 
					android:id="@+id/TextView07" 
					android:textSize="16sp"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:paddingLeft="20dip"
					android:gravity="right"></TextView>
				<EditText 
					android:id="@+id/DelWeight" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:inputType="phone"
					android:maxWidth="100sp"
					android:maxHeight="10sp"
					android:paddingLeft="50dip"></EditText>
			</TableRow>
</TableLayout>
<TableLayout 
	android:id="@+id/TableLayout02" 
	android:layout_below="@id/TableLayout01" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
		<TableRow 
			android:id="@+id/TableRow04" 
			android:gravity="center"
			android:layout_marginTop="15dip"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
				<Button 
					android:text="@string/save_changes" 
					android:id="@+id/DelSave" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_weight="1"></Button>
				<Button 
					android:text="@string/dismiss_changes" 
					android:id="@+id/DelDismiss" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_weight="1"></Button>
				<Button 
					android:text="@string/delete_entries" 
					android:id="@+id/DelDelete" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_weight="1"></Button>
		</TableRow>
</TableLayout>
</RelativeLayout>
